<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:orientation="vertical"
    android:padding="0dp"
    android:weightSum="1"
    tools:context="net.skyleet.xviiiaiambt.ContactUs">



    <TextView
        android:id="@+id/textView5"
        android:layout_width="91dp"
        android:layout_height="37dp"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/patron"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#0026ff" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/prof_i_k_bhat_n_director_mnit_jaipur"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/chairman"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#0026ff" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/prof_m_k_shrimali_n_dean_student_welfare"
        android:textAlignment="center"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/convener"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#0026ff" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/dr_subir_debnath_919414447705"
        android:textAlignment="center"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/organising_secretary"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#0026ff" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/veer"
        android:textAlignment="center"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/joint_organising_secretary"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#0026ff" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/shubham_agarwal_91999_n_second_name_91999_n_shyamm_sunder_meena_919999"
        android:textAlignment="center"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="30dp">

        <ImageButton

            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:adjustViewBounds="true"
            android:background="#00ffffff"
            android:foregroundGravity="center"
            android:onClick="openBrowser"
            android:paddingRight="20dp"
            android:scaleType="fitXY"
            android:src="@mipmap/www"
            android:tag="http://www.mnit.ac.in/event/aiambt/"
            android:textAlignment="center" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#00ffffff"
            android:onClick="openBrowser"
            android:paddingRight="20dp"
            android:src="@mipmap/fb"
            android:tag="https://www.facebook.com/www.aiambt.org/" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="#00ffffff"
            android:onClick="openBrowser"
            android:src="@mipmap/yt"
            android:tag="https://youtube.com" />
    </LinearLayout>
</LinearLayout>
